--- a/week1.html
+++ b/week1.html
@@ -21,7 +21,13 @@
     </header>
     <main>
         <h1>Week 1</h1>
-        <section></section>
+
+        <section>
+            <p>This week I refreshed my memory on how to produce a webpage with 
+                HTML, CSS & Javascript.
+            </p>
+            <img src="images/Week 1 Project.jpg" alt="Story Editor">
+        </section>
     </main>
     <footer></footer>
 </body>
