--- a/week2.html
+++ b/week2.html
@@ -24,6 +24,25 @@
         <section>
             <ul>
                 <li><a href="ninja.html">Quiz Ninja</a></li>
+                <li><a href="week2Team.html">Week 2 Team Project</a></li>
+            </ul>
+            <ul id="whatILearned">
+            <li><b>Don’t Repeat Yourself,or DRY</b>, is a principle of programming 
+                that specifies that every part of a program should only be 
+                written once. This avoids duplication and means there’s no 
+                need to keep multiple pieces of code up to date and in sync.</li>
+            <li><b>Arrow functions</b> can be identified by the 'arrow' symbol, => that 
+                gives them their name. The parameters come before the arrow and 
+                the main body of the function comes after. Arrow functions are 
+                always anonymous, so if you want to refer to them, you must assign 
+                them to a variable.</li>
+            <li>Hoisting is the JavaScript interpreter’s action of moving all variable 
+                and function declarations to the top of the current scope, regardless of 
+                where they are defined.</li>
+            <li><b>Use of Arrow Functions</b><br>
+                You'll notice that arrow functions are frequently used to declare the callbacks 
+                in these examples. This because they are short functions, often only taking up 
+                one line, making them a good candidate for using the arrow notation.</li>
             </ul>
         </section>
     </main>
