--- a/week3.html
+++ b/week3.html
@@ -23,9 +23,8 @@
         <h1>Week 3 January 20-25, 2020</h1>
         <section>
             <ul>
-                <li>
-
-                </li>
+                <li><a href="ninja.html">Ninja Project</a></li>
+                <li><a href="events.html">Events Click and Key</a></li>
             </ul>
             <ul id="whatILearned">
                 <li>This in a global context<br>
@@ -49,9 +48,13 @@
                 <li>This in event listeners<br>
                     this is set to the element that fired the event in an event listener</li>
                 <li><img src="images/objectChapterSummary.jpg" alt="Chapter 5 Summary"></li>
+                <li><img src="images/DOM Chapter Summary.jpg" alt="Chapter 6 Summary"></li>
+                <li><img src="images/Events.jpg" alt="Chapter 7 Summary"></li>
             </ul>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <script src='scripts/week3.js'></script>
+    </footer>
 </body>
 </html>
