--- a/ninja.html
+++ b/ninja.html
@@ -1,19 +1,25 @@
 <!doctype html>
 <html lang='en'>
 <head>
-  <meta charset='utf-8'>
-  <meta name='description' content='A JavaScript Quiz Game'>
-  <title>Quiz Ninja</title>
-  <link rel='stylesheet' href='styles/ninja.css'>
+<meta charset='utf-8'>
+<meta name='description' content='A JavaScript Quiz Game'>
+<title>Quiz Ninja</title>
+<link rel='stylesheet' href='styles/ninja.css'>
 </head>
 <body>
   <section class='dojo'>
     <div class='quiz-body'>
-      <header>
-        <h1>Quiz Ninja!</h1>
-      </header>
-    </div>
-  </section>
+    <header>
+      <div id='score'>Score: <strong>0</strong></div>
+      <h1>Quiz Ninja!</h1>
+    </header>
+    <div id='question'></div>
+    <div id='result'></div>
+    <div id='info'></div>
+    <button id='start'>Click to Start</button>
+  </div>
+</section>
 <script src='scripts/ninjaproject.js'></script>
+
 </body>
 </html>
