--- a/week5.html
+++ b/week5.html
@@ -26,10 +26,11 @@
             <ul>
                 <li><a href="ninja5.html">Ninja Project Week 5</a></li>
                 <li><a href="week5team/week5teamIndex.html">Week 5 Team activity</a></li>
+                <li><a href="ToDoProject/index.html">To Do Work in Progress</a></li>
             </ul>
             <ul>
                 <ul id="whatILearned">
-                    <h5>Chapter 10</h5>
+                    <h3>Chapter 10</h3>
                     <li>Bugs are unavoidable in code, and it’s best to find them early rather than later.</li>
                     <li>JavaScript can be put into strict mode using the string "use strict" . This can be used in a whole file or just a single function.</li>
                     <li>Linting tools can be used to ensure your code follows good practice and conventions.</li>
