--- a/ToDoProject/index.html
+++ b/ToDoProject/index.html
@@ -12,9 +12,6 @@
 
         <ul class="todoCheckList">
             <li class="todoCheckItem"><input type="checkbox"> todo 1<button>X</button></li>
-            <li class="todoCheckItem"><input type="checkbox"> todo 2<button>X</button></li>
-            <li class="todoCheckItem"><input type="checkbox"> todo 3<button>X</button></li>
-            <li class="todoCheckItem"><input type="checkbox"> todo 4<button>X</button></li>
         </ul>
         <nav class="todoListFooter">
             <ul>
@@ -26,10 +23,10 @@
         </nav>
     </form>
     <footer>
-        <div id="myDIV" class="footer">
+        <div class="footer">
 
-            <input type="text" id="myInput" placeholder="Title...">
-            <span onclick="newElement()" class="addBtn">Add</span>
+            <input type="text" id="myInput" placeholder="New todo">
+            <button onclick="newElement()" class="addBtn">Add</button>
         </div>
 
     </body>
