--- a/weeklypages/week4.html
+++ b/weeklypages/week4.html
@@ -23,7 +23,7 @@
         <h1>Week 4 January 27 - February 1, 2020</h1>
         <section>
             <ul>
-                <li><a href="ninja4.html">Ninja Project</a></li>
+                <li><a href="/ninjaproject/ninja4.html">Ninja Project</a></li>
                 <li><a href="hero.html">Hero Form</a></li>
                 <li><a href="search.html">Search</a></li>
             </ul>
