--- a/weeklypages/week7.html
+++ b/weeklypages/week7.html
@@ -25,7 +25,7 @@
 
         <section>
             <ul>
-                <li><a href="ninja7.html">Ninja Project Week 7</a></li>
+                <li><a href="/ninjaproject/ninja7.html">Ninja Project Week 7</a></li>
                 <li><a href="week7team/week5teamIndex.html">Week 7 Team activity</a></li>
                 <li><a href="ToDoProject/index.html">To Do Work in Progress</a></li>
             </ul>
