--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="week1.html">Week 1</a></li>
-            <li><a href="week2.html">Week 2</a></li>
-            <li><a href="week3.html">Week 3</a></li>
-            <li><a href="week4.html">Week 4</a></li>
-            <li><a href="week5.html">Week 5</a></li>
-
+            <li><a href="weeklypages/week1.html">Week 1</a></li>
+            <li><a href="weeklypages/week2.html">Week 2</a></li>
+            <li><a href="weeklypages/week3.html">Week 3</a></li>
+            <li><a href="weeklypages/week4.html">Week 4</a></li>
+            <li><a href="weeklypages/week5.html">Week 5</a></li>
+            <li><a href="weeklypages/week7.html">Week 7</a></li>
         </ul>
     </header>
     <main>
