--- a/weeklypages/week2.html
+++ b/weeklypages/week2.html
@@ -23,7 +23,7 @@
         <h1>Week 2 January 13-18, 2020</h1>
         <section>
             <ul>
-                <li><a href="ninja.html">Quiz Ninja</a></li>
+                <li><a href="/ninjaproject/ninja.html">Quiz Ninja</a></li>
                 <li><a href="week2Team.html">Week 2 Team Project</a></li>
             </ul>
             <ul id="whatILearned">
