--- a/weeklypages/week3.html
+++ b/weeklypages/week3.html
@@ -23,7 +23,7 @@
         <h1>Week 3 January 20-25, 2020</h1>
         <section>
             <ul>
-                <li><a href="ninja.html">Ninja Project</a></li>
+                <li><a href="/ninjaproject/ninja.html">Ninja Project</a></li>
                 <li><a href="events.html">Events Click and Key</a></li>
             </ul>
             <ul id="whatILearned">
