--- a/weeklypages/week1.html
+++ b/weeklypages/week1.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gwendolyn Allphin's Portfolio Week 1</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="week1.html">Week 1</a></li>
             <li><a href="week2.html">Week 2</a></li>
             <li><a href="week3.html">Week 3</a></li>
             <li><a href="week4.html">Week 4</a></li>
             <li><a href="week5.html">Week 5</a></li>
-
+            <li><a href="week7.html">Week 7</a></li>
         </ul>
     </header>
     <main>
@@ -26,7 +26,7 @@
             <p>This week I refreshed my memory on how to produce a webpage with 
                 HTML, CSS & Javascript.
             </p>
-            <img src="images/Week 1 Project.jpg" alt="Story Editor">
+            <img src="../images/Week 1 Project.jpg" alt="Story Editor">
         </section>
     </main>
     <footer></footer>
