--- a/weeklypages/week2.html
+++ b/weeklypages/week2.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gwendolyn Allphin's Portfolio Week 2</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
     <header>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="week1.html">Week 1</a></li>
             <li><a href="week2.html">Week 2</a></li>
             <li><a href="week3.html">Week 3</a></li>
             <li><a href="week4.html">Week 4</a></li>
             <li><a href="week5.html">Week 5</a></li>
-
+            <li><a href="week7.html">Week 7</a></li>
         </ul>
     </header>
     <main>
