--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="weeklypages/week5.html">Week 5</a></li>
             <li><a href="weeklypages/week7.html">Week 7</a></li>
             <li><a href="weeklypages/week8.html">Week 8</a></li>
+            <li><a href="weeklypages/week9.html">Week 9</a></li>
         </ul>
     </header>
     <main>
