--- a/weeklypages/week9.html
+++ b/weeklypages/week9.html
@@ -32,6 +32,7 @@
                 <li><a href="../week9/canvas.html">Canvas</a></li>
                 <li><a href="../ninjaproject/ninja9a.html">Chapter 9 Quiz Ninja</a></li>
                 <li><a href="../ninjaproject/ninja9b.html">Chapter 14 Quiz Ninja</a></li>
+                <li><a href="../week9team/index-START.html">Team Activity (Drums)</a></li>
             </ul>
             <ul>
                 <ul id="whatILearned">
