--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href="weeklypages/week7.html">Week 7</a></li>
             <li><a href="weeklypages/week8.html">Week 8</a></li>
             <li><a href="weeklypages/week9.html">Week 9</a></li>
+            <li><a href="weeklypages/week10.html">Week 10</a></li>
         </ul>
     </header>
     <main>
