weekly pages updates

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <header>
+        <h1>Gwendolyn's Portfolio</h1>
+    </header>
+    <main>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="weeklypages/week1.html">Week 1</a></li>
@@ -20,11 +23,9 @@
             <li><a href="weeklypages/week8.html">Week 8</a></li>
             <li><a href="weeklypages/week9.html">Week 9</a></li>
             <li><a href="weeklypages/week10.html">Week 10</a></li>
+            <li><a href="weeklypages/week11.html">Week 11</a></li>
+            <li><a href="weeklypages/finalprojects.html">Final Projects</a></li>
         </ul>
-    </header>
-    <main>
-        <h1>Gwendolyn's Portfolio</h1>
-        <section></section>
     </main>
     <footer></footer>
 </body>
