--- a/weeklypages/finalprojects.html
+++ b/weeklypages/finalprojects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gwendolyn Allphin's Portfolio Week 8</title>
+    <title>Gwendolyn Allphin's Portfolio Major Projects</title>
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
@@ -17,32 +17,19 @@
             <li><a href="../weeklypages/week4.html">Week 4</a></li>
             <li><a href="../weeklypages/week5.html">Week 5</a></li>
             <li><a href="../weeklypages/week7.html">Week 7</a></li>
+            <li><a href="../weeklypages/week8.html">Week 8</a></li>
             <li><a href="../weeklypages/week9.html">Week 9</a></li>
             <li><a href="../weeklypages/week10.html">Week 10</a></li>
             <li><a href="../weeklypages/week11.html">Week 11</a></li>
-            <li><a href="../weeklypages/finalprojects.html">Final Projects</a></li>
         </ul>
     </header>
     <main>
-        <h1>Week 7 February 24-29, 2020</h1>
+        <h1>Major Projects April 8, 2020</h1>
 
         <section>
             <ul>
-                <li><a href="../week8/transformsandtransitions.html">Transforms and Transitions</a></li>
-                <li><a href="../week8/pokemon.html.html">Week 8 Team activity</a></li>
-                <li><a href="../week8/swapi.html">Teacher Example for team activity</a></li>
-                <li><a href="../ToDoProject/index.html">To Do Work in Progress</a></li>
-                <li><a href="../week8/canvasetc.html">Canvas, ETC</a></li>
+                <li><a href="../ToDoProject/index.html">To-Do Application</a></li>
             </ul>
-            <ul>
-                <ul id="whatILearned">
-                    <h3>CSS, Transforms ETC</h3>
-                    <li>I learned more by playing around with the different things that you can do 
-                        with css and being on my own and not having everything spelled out this week.
-                    </li>
-                </ul>
-            </ul>
-            
         </section>
     </main>
     <footer></footer>
