--- a/weeklypages/week3.html
+++ b/weeklypages/week3.html
@@ -27,7 +27,7 @@
         <h1>Week 3 January 20-25, 2020</h1>
         <section>
             <ul>
-                <li><a href="/ninjaproject/ninja.html">Ninja Project</a></li>
+                <li><a href="../ninjaproject/ninja.html">Ninja Project</a></li>
                 <li><a href="events.html">Events Click and Key</a></li>
             </ul>
             <ul id="whatILearned">
@@ -51,14 +51,14 @@
                     the this context stays as the object, not Window.</li>
                 <li>This in event listeners<br>
                     this is set to the element that fired the event in an event listener</li>
-                <li><img src="images/objectChapterSummary.jpg" alt="Chapter 5 Summary"></li>
-                <li><img src="images/DOM Chapter Summary.jpg" alt="Chapter 6 Summary"></li>
-                <li><img src="images/Events.jpg" alt="Chapter 7 Summary"></li>
+                <li><img src="../images/objectChapterSummary.jpg" alt="Chapter 5 Summary"></li>
+                <li><img src="../images/DOM Chapter Summary.jpg" alt="Chapter 6 Summary"></li>
+                <li><img src="../images/Events.jpg" alt="Chapter 7 Summary"></li>
             </ul>
         </section>
     </main>
     <footer>
-        <script src='scripts/week3.js'></script>
+        <script src='../scripts/week3.js'></script>
     </footer>
 </body>
 </html>
