--- a/weeklypages/week2.html
+++ b/weeklypages/week2.html
@@ -27,8 +27,8 @@
         <h1>Week 2 January 13-18, 2020</h1>
         <section>
             <ul>
-                <li><a href="/ninjaproject/ninja.html">Quiz Ninja</a></li>
-                <li><a href="week2Team.html">Week 2 Team Project</a></li>
+                <li><a href="../ninjaproject/ninja.html">Quiz Ninja</a></li>
+                <li><a href="../week2Team.html">Week 2 Team Project</a></li>
             </ul>
             <ul id="whatILearned">
             <li><b>Don’t Repeat Yourself,or DRY</b>, is a principle of programming 
