--- a/weeklypages/week3.html
+++ b/weeklypages/week3.html
@@ -28,7 +28,7 @@
         <section>
             <ul>
                 <li><a href="../ninjaproject/ninja.html">Ninja Project</a></li>
-                <li><a href="events.html">Events Click and Key</a></li>
+                <li><a href="../events.html">Events Click and Key</a></li>
             </ul>
             <ul id="whatILearned">
                 <li>This in a global context<br>
