--- a/weeklypages/week4.html
+++ b/weeklypages/week4.html
@@ -27,9 +27,9 @@
         <h1>Week 4 January 27 - February 1, 2020</h1>
         <section>
             <ul>
-                <li><a href="/ninjaproject/ninja4.html">Ninja Project</a></li>
-                <li><a href="hero.html">Hero Form</a></li>
-                <li><a href="search.html">Search</a></li>
+                <li><a href="../ninjaproject/ninja4.html">Ninja Project</a></li>
+                <li><a href="../hero.html">Hero Form</a></li>
+                <li><a href="../search.html">Search</a></li>
             </ul>
             <ul id="whatILearned">
                 <h5>Chapter 8</h5>
