--- a/weeklypages/week5.html
+++ b/weeklypages/week5.html
@@ -28,9 +28,9 @@
 
         <section>
             <ul>
-                <li><a href="/ninjaproject/ninja5.html">Ninja Project Week 5</a></li>
-                <li><a href="week5team/week5teamIndex.html">Week 5 Team activity</a></li>
-                <li><a href="/ToDoProject/index.html">To Do Work in Progress</a></li>
+                <li><a href="../ninjaproject/ninja5.html">Ninja Project Week 5</a></li>
+                <li><a href="../week5team/week5teamIndex.html">Week 5 Team activity</a></li>
+                <li><a href="../ToDoProject/index.html">To Do Work in Progress</a></li>
             </ul>
             <ul>
                 <ul id="whatILearned">
