--- a/ToDoProject/index.html
+++ b/ToDoProject/index.html
@@ -38,7 +38,7 @@
         </div>
     </main>
     <footer>
-
+        <h6>&copy;Gwendolyn Allphin CIT261</h6>
     </footer>
     <script src="main.js" type="module"></script>
 </body>
