--- a/weeklypages/finalprojects.html
+++ b/weeklypages/finalprojects.html
@@ -29,6 +29,7 @@
         <section>
             <ul>
                 <li><a href="../ToDoProject/index.html">To-Do Application</a></li>
+                <li><a href="../RecipeApp/index.html">Recipe Application</a></li>
             </ul>
         </section>
     </main>
