--- a/RecipeApp/recipe.html
+++ b/RecipeApp/recipe.html
@@ -14,14 +14,14 @@
         <hr>
     </header>
     <nav class="topnav">
-        <ul id="myLinks">
-            <li class="menuList"><a href="#home" class="active">Home</a></li>
-            <li class="menuList"><a href="#apetizers">Apetizers</a></li>
-            <li class="menuList"><a href="#main">Main Dishes</a></li>
-            <li class="menuList"><a href="#salad">Salad</a></li>
-            <li class="menuList"><a href="#dessert">Dessert</a></li>
-        </ul>
-        
+        <button class="menuList"><a href="index.html" class="active">Home</a></button>
+        <button class="menuList" id="chicken">Chicken</button>
+        <button class="menuList" id="beef">Beef</button>
+        <button class="menuList" id="pork">Pork</button>
+        <button class="menuList" id="lamb">Lamb</button>
+        <button class="menuList" id="seafood">Seafood</button>
+        <button class="menuList" id="vegetarian">Vegetarian</button>
+        <button class="menuList" id="vegan">Vegan</button>
     </nav>
     <footer>
         <h4>&copy;2020 Gwendolyn Allphin CIT261</h4>
