--- a/RecipeApp/index.html
+++ b/RecipeApp/index.html
@@ -26,7 +26,7 @@
     <main class="mainStyles">
         <hr>
         <div id="recipeDiv">
-            <img id="picture" src="images/fullmeal.jpg">
+            <img id="picture" src="images/fullmealfs.jpg">
         </div>
 
         <hr>
