--- a/RecipeApp/recipe.html
+++ b/RecipeApp/recipe.html
@@ -23,9 +23,14 @@
         <button class="menuList" id="vegetarian">Vegetarian</button>
         <button class="menuList" id="vegan">Vegan</button>
     </nav>
+    <main>
+        <div>
+            Recipe Goes Here
+        </div>
+    </main>
     <footer>
         <h4>&copy;2020 Gwendolyn Allphin CIT261</h4>
     </footer>
-    <link href="recipe.js">
+    <script src="recipe.js"></script>
 </body>
 </html>
