--- a/RecipeApp/index.html
+++ b/RecipeApp/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="background">
     <header>
-        <img src="images/heroImage.jpg" alt="hamburger and all of the fixings" class="heroPic">
+        <img src="images/heroImagesm.jpg" alt="hamburger and all of the fixings" class="heroPic">
         <h1>The Recipe App!</h1>
         <hr>
     </header>
