--- a/RecipeApp/index.html
+++ b/RecipeApp/index.html
@@ -10,7 +10,7 @@
 <body class="background">
     <header>
         <img src="images/heroImagesm.jpg" alt="hamburger and all of the fixings" class="heroPic">
-        <h1>The Recipe App!</h1>
+        <!-- <h1>The Recipe App!</h1> -->
         <hr>
     </header>
     <nav class="topnav">
