--- a/RecipeApp/index.html
+++ b/RecipeApp/index.html
@@ -9,12 +9,11 @@
 </head>
 <body class="background">
     <header>
-        <img src="images/heroImagesm.jpg" alt="hamburger and all of the fixings" class="heroPic">
+        <a href="index.html"><img src="images/heroImagesm.jpg" alt="hamburger and all of the fixings" class="heroPic"></a>
         <!-- <h1>The Recipe App!</h1> -->
         <hr>
     </header>
     <nav class="topnav">
-        <button class="menuList"><a href="index.html" class="active">Home</a></button>
         <button class="menuList" id="chicken">Chicken</button>
         <button class="menuList" id="beef">Beef</button>
         <button class="menuList" id="pork">Pork</button>
