fixed broken links

--- a/ninjaproject/ninja4.html
+++ b/ninjaproject/ninja4.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8'>
 <meta name='description' content='A JavaScript Quiz Game'>
 <title>Quiz Ninja</title>
-<link rel='stylesheet' href='styles/ninja4.css'>
+<link rel='stylesheet' href='../styles/ninja4.css'>
 </head>
 <body>
   <section class='dojo'>
@@ -23,7 +23,7 @@
     <button id='start'>Click to Start</button>
   </div>
 </section>
-<script src='scripts/ninjaproject4.js'></script>
+<script src='../scripts/ninjaproject4.js'></script>
 
 </body>
 </html>
