--- a/weeklypages/week8.html
+++ b/weeklypages/week8.html
@@ -29,7 +29,7 @@
         <section>
             <ul>
                 <li><a href="../week8/transformsandtransitions.html">Transforms and Transitions</a></li>
-                <li><a href="../week8/pokemon.html.html">Week 8 Team activity</a></li>
+                <li><a href="../week8/pokemon.html">Week 8 Team activity</a></li>
                 <li><a href="../week8/swapi.html">Teacher Example for team activity</a></li>
                 <li><a href="../ToDoProject/index.html">To Do Work in Progress</a></li>
                 <li><a href="../week8/canvasetc.html">Canvas, ETC</a></li>
