--- a/ninjaproject/ninja5.html
+++ b/ninjaproject/ninja5.html
@@ -4,7 +4,7 @@
 <meta charset='utf-8'>
 <meta name='description' content='A JavaScript Quiz Game'>
 <title>Quiz Ninja</title>
-<link rel='stylesheet' href='styles/ninja5.css'>
+<link rel='stylesheet' href='../styles/ninja5.css'>
 </head>
 <body>
   <section class='dojo'>
@@ -24,7 +24,7 @@
       <button id='start'>Click to Start</button>
     </div>
   </section>
-<script src='scripts/ninjaproject5.js'></script>
+<script src='../scripts/ninjaproject5.js'></script>
 
 </body>
 </html>
